@@ -7,6 +7,16 @@
 
 See UPGRADE document for a list of incompatible changes.
 
+Interchange 5.7.2 not yet released.
+
+Core
+----
+
+* Enable catalog usertags within dispatch routines.
+
+
+------------------------------------------------------------------------------
+
 
 Interchange 5.7.1 released 2008-11-13.
 
